.k8s/voksenbamse.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voksenbamse
  labels:
    app: voksenbamse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voksenbamse
  template:
    metadata:
      labels:
        app: voksenbamse
    spec:
      containers:
      - name: voksenbamse
        image: docker.io/library/voksenbamse:1.0.44
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: http-voksenbamse
