.k8s/voksenbamse.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voba
spec:
  type: NodePort
  selector:
    app: voba
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: http-voba
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30077
      name: svc-voba
