.k8s/voksenbamse.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voksenbamse-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/location-snippet: |
      proxy_set_header X-Forwarded-Proto https;
      server_name   voksenbamse.dk *.voksenbamse.dk;      

    nginx.ingress.kubernetes.io/server-snippet: |
        set $agentflag 0;

        if ($http_user_agent ~* "(Mobile)" ){
          set $agentflag 1;
        }

spec:
  ingressClassName: nginx
  rules:
  - host: voksenbamse.dk
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: voksenbamse
            port: 
              number: 80
